# GameOfLife

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: Cell.hpp  CellFactory.hpp  CellState.hpp  CellStateMachine.hpp  GenerationMachine.hpp  MatrixDimentions.hpp  Seed.hpp  fps.hpp
src/: main.cpp
test/: CellFactoryTest.cpp  SeedTest.cpp
